tests/ok/item-macro-struct-identity.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(struct Generated {
  value: i64,
});

fn main() -> i64 {
  let generated = Generated { value: 42 };
  return generated.value;
}
