tests/errors/prelude-macro-format-planned.ari
fn main() -> i64 {
  let text = format!("value={}", 1);
  let ignored = text;
  return 0;
}
